# MER

./: .flake8  .gitignore  ABLATION.md  ARCHITECTURE.md  BASELINE_REPORT.md  DIAGNOSIS.md  EXPERIMENTS_REPORT.md  IMPROVEMENTS_REPORT.md  MASTER_PROJECT_REPORT.md  PROJECT_REPORT.md  README.md  build_memmap_features.py  evaluate.py  evaluate_hf_e2e.py  extract_at_features.py  extract_at_features_hf.py  index.html  train.py  train_hf_e2e.py  visualize_flexible_at.py
configs/: mer_builder_at_hf.yaml  mer_builder_at_hf_e2e.yaml  (+19 more)
mer_dataset_builder/: .gitignore  README.md  pyproject.toml
mer_dataset_builder/scripts/: build_all.ps1  build_all.sh
mer_dataset_builder/src/mer_builder/: __main__.py  cli.py  config.py
mer_dataset_builder/src/mer_builder/download/: __init__.py  download_cremad.py  download_emovdb.py  download_esd.py  download_iemocap.py  download_mead.py  download_meld.py  download_ravdess.py
mer_dataset_builder/src/mer_builder/prepare/: __init__.py  build_manifest.py  integrity.py  map_labels.py  normalize_audio.py  parse_cremad.py  parse_emovdb.py  parse_esd.py  parse_iemocap.py  parse_mead.py  parse_meld.py  parse_ravdess.py  split_speakers.py  types.py  validate.py
mer_dataset_builder/src/mer_builder/utils/: ffmpeg.py  gdrive.py  hashing.py  io.py  text_norm.py
mer_dataset_builder/src/mer_dataset_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mer_dataset_builder/tests/: test_emovdb_dedup.py  test_integrity.py  test_label_mapping.py  test_normalize_audio_cache.py  test_silence_wav.py  test_speaker_split.py
src/: README.md  (+14 more)
(+684 files in other folders)
